server/vm-k8s/k8s/base/maddy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: maddy
  name: maddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maddy
  strategy: {}
  template:
    metadata:
      labels:
        app: maddy
    spec:
      volumes:
      - name: config
        configMap:
          name: maddy
          items:
            - key: maddy.conf
              path: maddy.conf
      containers:
      - image: foxcpp/maddy:0.7
        name: maddy
        resources: {}
        volumeMounts:
          - name: config
            mountPath: /data/maddy.conf
            subPath: "maddy.conf"
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: roundcube
  name: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  strategy: {}
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
      - image: roundcube/roundcubemail:1.6.x-apache
        name: roundcube
        resources: {}
status: {}
