server/vm-k8s/k8s/base/maddy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: maddy
spec:
  selector:
    app: maddy
  type: NodePort
  ports:
    - nodePort: 30025
      targetPort: 25
      port: 25
      protocol: TCP
      name: smtp
    - nodePort: 30143
      targetPort: 143
      port: 143
      protocol: TCP
      name: imap
    - nodePort: 30587
      targetPort: 587
      port: 587
      protocol: TCP
      name: smtpsecure
    - nodePort: 30993
      targetPort: 993
      port: 993
      protocol: TCP
      name: imapsecure
---
apiVersion: v1
kind: Service
metadata:
  name: roundcube
spec:
  selector:
    app: roundcube
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: maddy-metrics
spec:
  selector:
    app: maddy
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9749
      protocol: TCP
